fix alignment of buttons on chrome

--- a/flaskapp/static/style.css
+++ b/flaskapp/static/style.css
@@ -119,7 +119,7 @@ li{
 .middle-container{
   display:flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .card-container {
@@ -242,11 +242,11 @@ li{
 ----------------------  */
 
 .button-container{
-  padding-right: 6em;
   padding-bottom: 2em;
-  width:100%;
+  width:1000px;
   display:flex;
-  justify-content:end
+  justify-content: flex-end;
+  padding-right: 6em;
 }
 
 #new-sub-button {
